# uriparser

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  GOALS.txt  Makefile.am  README.md  SECURITY.md  THANKS  appveyor.yml  liburiparser.pc.in  make-distcheck.sh  mull.yml
.github/workflows/: build-and-test.yml  clang_format.yml  codespell.yml  coverage.yml  fuzzing.yml  windows.yml
ci/: build.sh
cmake/: UriParserConfig.cmake.in  UriParserConfigVersion.cmake.in  liburiparser.pc.cmakein  liburiparser.pc.in
cmake/test_find_package/: CMakeLists.txt
contrib/: FindURIPARSER.cmake
doc/: .gitignore  Doxyfile.in  Mainpage.txt  preprocess.sh  release.sh.in  rule_dependencies.dot
fuzz/: DissectQueryMallocFuzzer.cpp  FreeFuzzer.cpp  FuzzingUtils.h  ParseFuzzer.cpp  uri_free_fuzzer.cc  uri_parse_fuzzer.cc
include/uriparser/: Uri.h  UriBase.h  UriDefsConfig.h  UriIp4.h  uriparser_export.h
scripts/: edit_version.sh
src/: UriCommon.c  UriCommon.h  UriCompare.c  UriCopy.c  UriCopy.h  UriEscape.c  UriFile.c  UriIp4.c  UriMemory.c  UriNormalize.c  UriNormalize.h  UriParse.c  UriParseBase.c  UriParseBase.h  UriQuery.c  UriRecompose.c  UriResolve.c  UriSetFragment.c  UriSetHostAuto.c  UriSetHostCommon.c  UriSetHostCommon.h  UriSetHostIp4.c  UriSetHostIp6.c  UriSetHostIpFuture.c  UriSetHostRegName.c  UriSetPath.c  UriSetPort.c  UriSetQuery.c  UriSetScheme.c  UriSetUserInfo.c  UriSets.h  UriSetter.c  UriShorten.c
test/: CompareRangeLengthWrap.cpp  FourSuite.cpp  MemoryManagerSuite.cpp  SetFragment.cpp  SetHostAuto.cpp  SetHostIp4.cpp  SetHostIp6.cpp  SetHostIpFuture.cpp  SetHostRegName.cpp  SetPath.cpp  SetPort.cpp  SetQuery.cpp  SetScheme.cpp  SetUserInfo.cpp  VersionSuite.cpp  copy.cpp  setter.cpp  test.cpp
tool/: uriparse.c
